# Qt5-CMake-examples

./: .gitignore  LICENSE  README.md
Level-1/01_hello_world/: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake  mainwindow.ui  qtcsettings.cmake
Level-1/02_designer_example/: CMakeLists.txt  mainwindow.cpp  mainwindow.ui
Level-1/03_signal_slot/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
Level-1/04_qpushbutton/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
Level-1/05_qtoolbutton/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
Level-1/06_radiobutton/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  res.qrc  style.qss
Level-1/07_qcheckbox/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  res.qrc  style.qss
Level-1/08_qcommandlinkbutton/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
Level-1/09_qdialogbuttonbox/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
Level-1/10-qcombobox/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
Level-1/11_qfontcombobox/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
Level-1/12_qlineedit/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
Level-1/13_qtextedit/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
Level-1/14_qplaintextedit/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
Level-1/15_qspinbox/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
Level-1/16_qdoublespinbox/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
Level-1/17_qdatetimeedit/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
Level-1/18_qdial/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
user/: .gitignore  CMakeLists.txt
(+247 files in other folders)
